staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
        namespace: staging-ns
    spec:
      containers:
      - name: web-app
        image: pujosn/web-app2:1.1.2
        resources:
          limits:
            memory: "50"
            cpu: "50m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: service-staging
  namespace: staging-ns
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
