deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
spec:
  # revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: app-web
  template:
    metadata:
      labels:
        app: app-web
      # namespace: backend
    spec:
      containers:
      - name: app-web
        image: pujosn/web-app2:1.1.1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "20Mi"
            cpu: "20m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-web-service
spec:
  selector:
    app: app-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9001
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-web-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1.takoples.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-web-service
                port:
                  number: 80
